Set max text height to prevent overflow

--- a/web_src/less/_review.less
+++ b/web_src/less/_review.less
@@ -197,6 +197,10 @@ a.blob-excerpt:hover {
   color: #fff;
 }
 
+#review-box .CodeMirror-scroll {
+  max-height: calc(100vh - 920px);
+}
+
 @media @mediaSm {
   #review-box > .menu {
     > .ui.segment {
